hockeypuck (0.1~alpha) UNRELEASED; urgency=low

  [Casey Marshall]
  * === added directory debian, cmd/hockeypuck/main.go,
    server.go, server_test.go, types.go:
    - Opening 0.1~alpha development, create debian/changelog.
    - Added comments to server.
  * === added directory pq, pq/cr_database.sql, pq/dr_database.sql,
    pq/worker.go:
    - Add a first cut at a database schema, random uuid generation.
    - Started pq-backed worker.
  * pq/cr_database.sql, pq/worker.go:
    - Commented the database schema & outlined plan for PqWorker.AddKey.

 -- Casey Marshall <casey.marshall@gazzang.com>  Thu, 02 Aug 2012 21:57:07 -0500